@@ -1,3 +1,13 @@
+2007-05-03	Michael Riepe  <too-tired@users.sourceforge.net>
+
+	* src/mpgfile.cpp: print estimated data rate.
+
+	* strc/index.cpp: changed additional error messages.
+
+2007-04-29	Michael Riepe  <too-tired@users.sourceforge.net>
+
+	* Changed export accelerator to 'E'.
+
 2007-04-13  Sven Over  <svenover@svenover.de>
 
 	* Released version 0.5.4.
